Fix compile errors in some Hyperskill tests